add snake food collision; gerate random food; functional Snake game